@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/printrun/printrun-20140730.ebuild,v 1.2 2014/08/09 12:25:39 amynka Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/printrun/printrun-20140730.ebuild,v 1.3 2014/08/09 21:19:16 amynka Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_6,2_7} )
+PYTHON_COMPAT=( python2_7 )
 
 inherit distutils-r1
 
