@@ -9,6 +9,6 @@ LICENSE=GPL-2
 RDEPEND=mysql? ( virtual/mysql ) dev-libs/expat id3tag? ( media-libs/id3lib ) javascript? ( >=dev-lang/spidermonkey-1.8.5:0 ) taglib? ( media-libs/taglib ) sqlite? ( >=dev-db/sqlite-3 ) lastfm? ( >=media-libs/lastfmlib-0.4 ) exif? ( media-libs/libexif ) mp4? ( >=media-libs/libmp4v2-1.9.1_p479:0 ) ffmpeg? ( virtual/ffmpeg ) flac? ( media-libs/flac ) thumbnail? ( media-video/ffmpegthumbnailer[jpeg] ) curl? ( net-misc/curl net-misc/youtube-dl ) magic? ( sys-apps/file ) sys-apps/util-linux zlib? ( sys-libs/zlib ) virtual/libiconv
 REQUIRED_USE=|| ( mysql sqlite ) taglib? ( !id3tag ) id3tag? ( !taglib ) thumbnail? ( ffmpeg )
 SLOT=0
-SRC_URI=https://github.com/v00d00/mediatomb/archive/mediatomb-0.12.2_pre20140809.tar.gz
+SRC_URI=https://github.com/v00d00/mediatomb/archive/mediatomb-0.12.2_pre20140810.tar.gz
 _eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=c98f3f47e97a91513066074a36b28978
+_md5_=7fb012426b14965989732ade82978d0f
