@@ -15,11 +15,11 @@ AUX mediatomb-0.12.1-thumbnail-locking.patch 4992 SHA256 7c760d4f74dceda8298b44a
 AUX mediatomb-0.12.1-youtube-dl.patch 4704 SHA256 76342683dea21e8566f599723658d4e90fb97c8d4d6dcc5c988115a308642667 SHA512 658e580499c17fb5a8f78c41095c38a94043c4e472b1996507b97229ab1fadd3c8044f9c3d27c8f210052e1c96b5ad88cf9e70daef9e98d2e740b9376eb7f102 WHIRLPOOL 3c9055ce23dd87651fe41e354ffc78bb0d3215456f8c0d8268fa968e7bf0d923971615820101fcf60b527305a1a8f9d4413ce0a9d5367fd3dc195f4579dfa020
 AUX mediatomb-0.12.1.initd 954 SHA256 7a12a5e4aac11e1e3abae9522ecea10527c813b12b51258f47518868c23c94c4 SHA512 6d8e3f95a8342e5a8097f17f1b44a52afad6c89cff59b8cbe8ccc947bdc41e4c20ecfc0f40fee3b64617b240b7f5d3d8e9c1c129eeb9cf5a7686982cdfddafe9 WHIRLPOOL 7d019d5f13278b3bf8755b79bb191beeaed7daf5843a24aa0bbe67dda6aa029b71171a0276322836c0ffaa5f43f0c39b0af1f0cb8f242667748b01e097ba4de0
 DIST mediatomb-0.12.1.tar.gz 1240612 SHA256 31163c34a7b9d1c9735181737cb31306f29f1f2a0335fb4f53ecccf8f62f11cd SHA512 36e7269a532a79c91b4ea7be36f92cbefa913a1f856e422e46fe2b97ee7a569dd20c38b0cbe651a8e7faacde892ea18f3cac66c3c0737480c44f9b9bc3a45438 WHIRLPOOL 6a9e294aa9f8f40850863a86bae4fd6a81d198d7f4cf34d67a6a0cd568c387ef0f0bd5a3524c7bc05cb304f4e86dd0c12dc773bd1034c1924af6919cc740177b
-DIST mediatomb-0.12.2_pre20140809.tar.gz 2477223 SHA256 e550d7c2f64311775a682065e2361c1600288950b6399e78c281274ce8f70f93 SHA512 2855074a136602185e6cee79581c013d3096e233a7fdd682dc296c220788a5e6d0ee5036c682e4699854d92e59862b972e81ea048d1b97abb8e622bcb6a40f97 WHIRLPOOL f4819cee698a4a976410a453164858548a9045ed97758ab021e43e445080c99ac5fa1c88b897c5597d4e379a8fb28ffe747ac4bf6db8abad67f394549d3b6ea7
+DIST mediatomb-0.12.2_pre20140810.tar.gz 2477251 SHA256 5e75cf58609a739be0b5c99b12eed927504b2370b82efa1ca1076900847563fa SHA512 545fcd9a7963abc7eb0fddf90ce28deffb08088f53b2e31d8bb59d63fe67662aa164171bfe6b4035dba39963259260327a16309cdc49434a04f7f88fa810165d WHIRLPOOL 40eb51619f70cebde15442d7818447cdd600c45848a0237e5dc00c0c82d012b5b1d3e08d0a19bc8315b4d7863b53d0157a72950d24fabe169b5fa586d5a58014
 DIST mediatomb_0.12.1-4.debian.tar.gz 34161 SHA256 b1e48d01f4f99362ef554c9220df21c48f6b76ad716e29427948a524e5c84d90 SHA512 21f876de3ec0b24bfcb37d387b5337d574f2e62e12944547f0a2e69e34532e296097fd04cce9941e994c3823a7bb863172db4fc3024d490f2a2359b7f0adb079 WHIRLPOOL ad38bc64411f1aac25672c522b862401897f0e4225ea21bab317a1c3311ef87a3e688f6ea1abb5a30eeb4cb3165dabbbff158eb5d4267dba901a54f15017078d
 DIST mediatomb_0.12.1-5.debian.tar.gz 36001 SHA256 bfbc971eeaeb09791d4cf1b1102a19ca9ce69d67c97608bba7b8ce3b519a8625 SHA512 420cf0d4fc0aa82337f2893ef18f04f9d079d833f2540d6bee504d423e8acee5e5ae528d97f5cd4228d6648777c62d6186532f7a74d3d0cb04f9226a2de1dd95 WHIRLPOOL 3d826181f97873fc9acb67fa5a3171b9e0c60862066cc0dd29e05a4f793828fbcfb438dd1375d56144933d101824a4f498b5dbf1e269e3bb12e4ee53d9b13d59
 EBUILD mediatomb-0.12.1-r7.ebuild 4426 SHA256 7d6fbb18ea1492ac81408fbcb9d7e62c0be0c35cc8420c75461d773da70968c6 SHA512 08fe49f1e201a4a334866f3a407b0f8de88fd22abb3554ce862b590dd553d9810513387c681e9e0a7355adbbe8905e5f8e1c970c802eaa0af8a8c5367e5e4773 WHIRLPOOL 90744b925113751c1db203ecabebdbac1bc5300fe46b254085fc2f4466d9436a420e3347f5323e07e3e36f532f7c9af36df1fc30e56847e29358a9d46d6d3183
 EBUILD mediatomb-0.12.1-r8.ebuild 4404 SHA256 a655d5b2a5ce0e3e4785746195bc0ca1bdb3afb567719c32e84fa62ee97eb540 SHA512 572cc306054279374d14fe3b84b1e40afccdfae4d2854b7ffe90816944e74fa65b33aee3e253db063a1cd6efd68a213bc2b1f96b16d4738711ef51059012320a WHIRLPOOL d744e35af9e359a825bb640abbe9fcb5af63bc9c16f41c606b7a93a42895563ae749e0a6bf193a07af116f8e295b6f37b0d4638a1acd6597b596ad3dcbdf2954
-EBUILD mediatomb-0.12.2_pre20140809.ebuild 3136 SHA256 4c515a6979618bfa7d6257ebf387cbaede7064ae24ce747970adfe3dcbfb25c7 SHA512 64c7310f144d40e5ea6a3bd2f364fe5773ad7dcd8dabc852985ddd03e623baeeb16b60e5216b4a495ed2539a4e896b146d2f7454dca8072e42aa884515b834d8 WHIRLPOOL 806a753159cdf1aa5fdd43e56074f5730a3944be2fd16041a21115f2420269962cea79c33082d5f52ceffd865ceaa8f72948a9d42fefefd33125260684dcb157
-MISC ChangeLog 10246 SHA256 948e407be871d319ffbc7d1c3abc0286c9398cb4c0f9616589e8486910aa2548 SHA512 767f70697e04e71f506646f70e73143c557461c1e3f9563a04fe6723db6aff443765f83893f504e8697d0346f09aca7181d339578d1141f1dd56306ae13ecd16 WHIRLPOOL d196c393cef4a30275554e5c1c9bd3fabdac3c95ce40e57d5e2cda7f73004ff4a2ae858992e08d2cf27e101fcef95984cfedb737e4f4ed93f1705da08bf3eedd
+EBUILD mediatomb-0.12.2_pre20140810.ebuild 3136 SHA256 421c124e93920dde69eeefd2abd03c511c6dead9ffc8a8a9197b601d5b66f47d SHA512 2cc1fed9c2146a7e704cce72fcfe0b72eb9e4649d8f0cff5dd743b1848d02cb4f63d097d71f4b30d63971fe20b1dffc84b3cb105698b28c844b74c71f9cfd024 WHIRLPOOL 53e2953503844229bbef563dc167575c307dbc2d74f3ba66c14f6de1e2b7ca212369521624444cb38fb46067202c26e9b0c60d056d899b60f08aefa1244f73a5
+MISC ChangeLog 10468 SHA256 927736962cb2402c84bad286379fc1907e8902ae95207b278c48bffe9c9ff79e SHA512 94f7c4ae74ecb07b01a4685ba2aa69e66441651711134605cac92bb8c21f29a5adffaa0177cbebce98a840d77a51dbc839827f9110c7e462b84bb6d04a473842 WHIRLPOOL 5a9782b8c1472bc62cb479aba16aa5a5d5068fb5b2d3d23ef5fe137a9951d6914e902a6fed70cc5fc26651720c5f90d12ffad3de3c8433f13acee59174fa0735
 MISC metadata.xml 1053 SHA256 80d12510f8130f063da5b1255f0e0ce668c11b1cb689392e93eb926be1fb9c0f SHA512 fbb8841367c92c0deb0a2248d4c3691d46e3f29e1270a41e78c1c11c7bb327393709e14e9ba6124c6ad7e3f953ecf1d3ced1e75784161c272f28b3fcafedc529 WHIRLPOOL 3eeb9bd0aaa01e7b2343c795daf175e4accacef6e7bfdc296e1df6c5e4b93fdc60e62585a80c605e4a86a3dc47d9f26202bf7a63fc97eb3dadf2953604e45f2c
