@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/mediatomb
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mediatomb/ChangeLog,v 1.54 2014/08/09 17:07:12 thev00d00 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mediatomb/ChangeLog,v 1.55 2014/08/09 21:27:39 thev00d00 Exp $
+
+*mediatomb-0.12.2_pre20140810 (09 Aug 2014)
+
+  09 Aug 2014; Ian Whyman <thev00d00@gentoo.org>
+  +mediatomb-0.12.2_pre20140810.ebuild, -mediatomb-0.12.2_pre20140809.ebuild:
+  New snapshot to fix SIGSEGV in LibMP4V2Handler
 
 *mediatomb-0.12.2_pre20140809 (09 Aug 2014)
 
